--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Michael Bieniek <31993181+MichaelBieniek@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon lib/server.js"
+    "dev": "nodemon lib/server.js",
+    "webpack": "webpack -wd"
   },
   "babel": {
     "presets": [
@@ -16,10 +17,16 @@
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "webpack": "^4.10.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
@@ -30,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.9.1",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "webpack-cli": "^3.0.2"
   }
 }
